# ocean

./: Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix
.github/workflows/: linux-gnu.yml
src/: lib.rs  main.rs  shell.rs
src/app/: delegate.rs  events.rs  mod.rs  state.rs
src/config/: config.rs  config.toml  file.rs  model.rs
src/render/: mod.rs  vertex.rs  wgpu.rs
src/render/shaders/: fs.wgsl
src/shell/: event.rs  mod.rs  pty.rs  shell.rs
