[package]
name = "ocean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.1"
cosmic-text = "0.11.2"
crossbeam = "0.8.4"
directories = "5.0.1"
fontdue = "0.8.0"
once_cell = "1.19.0"
pty-process = { version = "0.4.0", features = ["async"] }
serde = { version = "1.0.197", features = ["derive"] }
termwiz = "0.22.0"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
